﻿syntax = "proto3";

option csharp_namespace = "GrpcService.Core";

package person;

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
  float salary = 5;
  bool married=6;
}

// Our address book file is just one of these.
message AddressBook {
  repeated Person peoples = 1;
}

message SearchPerson{
    string name=1;
    int32 id=2;
    float salary=3;
    bool married=4;
}

service MyService {
  rpc SendMessage (Person) returns (SearchPerson);
}